# fastapi-do-zero

./: .gitignore  README.md
fast_zero/: pyproject.toml
fast_zero/fast_zero/: app.py
